# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: CI.yml  pyci.yml
gendiff/: __init__.py  cli.py  compare.py  gendiff.py  parser.py  reader.py
gendiff/formatters/: __init__.py  formatter.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: answer_json_flat  answer_json_next.txt  file2.txt
