[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Hexlet project - Difference Calculator"
authors = ["FooXeeD <fooxeed@mail.ru>"]
readme = "README.md"
repository = "https://github.com/FooXeeD/python-project-50"
packages = [{ include = "gendiff" },]

[tool.poetry.dependencies]
python = "^3.10"
coverage = "^7.2.7"
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
